--- a/ballotPlanner/Elections/ElectionDates.storyboard
+++ b/ballotPlanner/Elections/ElectionDates.storyboard
@@ -9,6 +9,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Elections Page View Controller-->
+        <scene sceneID="q2i-xT-otT">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="Ovh-xz-VZU" customClass="ElectionsPageViewController" customModule="ballotPlanner" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kcP-jf-G3B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1572" y="-12"/>
+        </scene>
         <!--Item-->
         <scene sceneID="HYI-6Q-fF8">
             <objects>
@@ -42,7 +50,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="TbQ-o9-R9C" kind="show" identifier="toDetailVC" id="sc3-Ee-dVc"/>
+                                            <segue destination="TbQ-o9-R9C" kind="show" identifier="toDetailVC" id="Pse-fq-IR3"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -76,23 +84,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mSm-WL-qIc" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-564" y="-4.4334975369458132"/>
+            <point key="canvasLocation" x="-713" y="-4"/>
         </scene>
         <!--ElectionDateDetail-->
         <scene sceneID="rzW-Mv-ug8">
             <objects>
-                <viewControllerPlaceholder storyboardName="ElectionDateDetail" id="TbQ-o9-R9C" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardIdentifier="ElectionDateDetail" storyboardName="ElectionDateDetail" id="TbQ-o9-R9C" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BTe-Ci-s5f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="99" y="-52"/>
+            <point key="canvasLocation" x="-168" y="-98"/>
         </scene>
         <!--CandidatesIndex-->
         <scene sceneID="XyA-Tn-GWD">
             <objects>
-                <viewControllerPlaceholder storyboardName="CandidatesIndex" id="Lrv-8L-laQ" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardIdentifier="CandidatesIndex" storyboardName="CandidatesIndex" id="Lrv-8L-laQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QDJ-Mu-d2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="92" y="-4"/>
+            <point key="canvasLocation" x="-104" y="-20"/>
         </scene>
     </scenes>
 </document>
